# assembly_laboratories_4

./: CMakeLists.txt  README.md
src/: integer_logical.asm  main.cpp
